FIX nav icon misaligned

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -59,6 +59,7 @@ p {
   display: block;
   color: #000000;
   padding: 9px 12px;
+  margin-right: -12px;
   text-decoration: none;
   font-size: 1.8rem;
   font-weight: 500;
